force-app/main/Government_Documents/Permit_And_Licensing/objects/Drilling_Plan__c/Drilling_Plan__c.object-meta.xml
<CustomObject>
    <label>Drilling Plan</label>
    <nameField>
        <displayFormat>DP-{0000000}</displayFormat>
        <label>Drilling Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drilling Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>