force-app/main/Government_Documents/Permit_And_Licensing/objects/Drilling_Plan__c/fields/APD_Application__c.field-meta.xml
<CustomField>
    <fullName>APD_Application__c</fullName>
    <label>APD Application</label>
    <referenceTo>APD_Application__c</referenceTo>
    <relationshipLabel>Drilling Plans</relationshipLabel>
    <relationshipName>Drilling_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <description>Master-detail relationship to APD Application</description>
</CustomField>