force-app/main/Government_Documents/Permit_And_Licensing/objects/Drilling_Plan__c/fields/Expected_Formation_Pressures__c.field-meta.xml
<CustomField>
    <fullName>Expected_Formation_Pressures__c</fullName>
    <description>Expected formation pressures (psi ranges) along the proposed wellbore</description>
    <inlineHelpText>Provide expected formation pressures and any abnormal pressure zones</inlineHelpText>
    <label>Expected Formation Pressures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>