force-app/main/Government_Documents/Permit_And_Licensing/objects/Drilling_Plan__c/fields/Expected_Freshwater_Zones__c.field-meta.xml
<CustomField>
    <fullName>Expected_Freshwater_Zones__c</fullName>
    <description>Expected freshwater zones encountered and protection requirements</description>
    <inlineHelpText>Identify any freshwater zones and protection measures</inlineHelpText>
    <label>Expected Freshwater Zones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>