force-app/main/Government_Documents/Permit_And_Licensing/objects/Drilling_Plan__c/fields/Expected_Lost_Circulation_Zones__c.field-meta.xml
<CustomField>
    <fullName>Expected_Lost_Circulation_Zones__c</fullName>
    <description>Expected lost circulation zones and mitigation strategies</description>
    <inlineHelpText>Describe any expected lost circulation zones and how they will be handled</inlineHelpText>
    <label>Expected Lost Circulation Zones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>