force-app/main/Government_Documents/Permit_And_Licensing/objects/Drilling_Plan__c/fields/Mud_Program__c.field-meta.xml
<CustomField>
    <fullName>Mud_Program__c</fullName>
    <label>Mud Program</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Detailed description of the mud program including mud types, weights, additives, and circulation system</description>
    <inlineHelpText>Describe the complete mud program including mud types for each section, expected mud weights, additives, and circulation procedures as required by Form 3160-3 Section 5</inlineHelpText>
</CustomField>