force-app/main/Government_Documents/Permit_And_Licensing/objects/Drilling_Plan__c/fields/Variance_Requests__c.field-meta.xml
<CustomField>
    <fullName>Variance_Requests__c</fullName>
    <label>Variance Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Description of any requested variances from standard BLM drilling requirements</description>
    <inlineHelpText>Describe any requested variances from BLM regulations with detailed justification. Leave blank if no variances are requested.</inlineHelpText>
</CustomField>